--- a/academy/templates/home.html
+++ b/academy/templates/home.html
@@ -90,7 +90,7 @@
 
     /* Hero */
     .hero {
-      background: url("{% static 'images/campus_bg.jpg' %}") center/cover no-repeat;
+      background: url("https://blogs.millersville.edu/globaledeblast/files/2015/10/Studying.jpg") center/cover no-repeat;
       min-height: 75vh;
       color: #fff;
       display: flex;
