--- a/academy/templates/students_details.html
+++ b/academy/templates/students_details.html
@@ -134,7 +134,7 @@ tr:hover {
   </nav>
 
   <!-- Back arrow link -->
-  <a href="{% url 'tutor_dashboard' %}" class="back-link">&larr; back</a>
+  <a href="{% url 'tutor_dashboard' %}" class="back-link">&larr; Back</a>
 
   <h1>Student Details</h1>
 
